--- a/order/src/main/resources/application.yaml
+++ b/order/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306
+    url: jdbc:mysql://localhost:3306/cloud
     username: root
     password: 123456
 
